charts/mediaserver/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  labels:
    app: tautulli
    app.kubernetes.io/name: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app: tautulli
        app.kubernetes.io/name: tautulli
    spec:
      containers:
        - name: tautulli
          image: "docker.io/linuxserver/tautulli:2.16.0"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: tautulli-port
              containerPort: 8181
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: /config
              subPath: "config/tautulli"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: init-files-tautulli
          configMap:
            defaultMode: 493
            name: init-tautulli-cm
