charts/mediaserver/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app: tautulli
spec:
  type: ClusterIP
  ports:
    - port: 8181
      targetPort: 8181
      protocol: TCP
      name: tautulli-port
  selector:
    app: tautulli
