charts/mediaserver/tautulli/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - tautulli.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tautulli
          namespace: mediaserver
          port: 8181
